# slack_saved_phrases

./: LICENSE  pyproject.toml  saved_phrases.py
